<resources>
    <string name="app_name">高雅音乐</string>
    <string name="welcome_text">TOUCH ME HERE</string>
    <string name="reset">点击以重置</string>
    <string name="playAll">一键开♂炮</string>
    <string name="delayDescription">延时：</string>
    <string name="number">数量：</string>
    <string name="delayUnit">ms</string>
    <string name="confirm">确定</string>
    <string name="changeAll">一键更改高雅音乐</string>
</resources>
